2003-01-19  Andras Varga

	* Cygwin fixes; put checkTckTkVersion and setupTkOptions (was generic_-
	bindings) into widgets.tcl

2003-01-12  Andras Varga

	* tree view improved

2003-01-11  Andras Varga

	* main.tcl: appearance of menus on Unix made more contemporary 
	(via option add's)

2003-01-04  Andras Varga

	* props.tcl: Module/Submodule/etc Properties dialogs now validate 
	values entered in the Parameters, Gates, Machines etc. tables, 
	so that invalid values no longer cause errors. (new proc validate-
	AttrValue)

2002-12-03  Andras Varga

	* plotedit.tcl: bugfix: it was not possible to draw exactly horizontal 
	or vertical connection arrows

	* drawopts.tcl: bugfix: Tcl error when icon in loaded NED file was not 
	found

2002-11-28  Andras Varga

	* drawopts.tcl: icon selection dialog improved

2002-11-12 Andras Varga

	* ported to Tk8.4 (several 'char *' to 'const char *' changes)

2002-11-04  Andras Varga

	* ebnf.y: synchronized with nedc

2002-05-04  ------ omnetpp-2.2 released ------

2002-04-06  Andras Varga

	* main.tcl: Fix for Cygwin: checkVersion complained about tk_patchLevel
        '8.0.4'. (In earlier versions, tk_patchLevel had the format '8.0p4').

        * *.tcl: puts "dbg: ..." statements replaced by a debug procedure, with
        debugging currently turned off.

2002-02-29  Andras Varga

	* findrepl.tcl: implemented backwards search/replace

2002-02-24  Andras Varga

	* gned.cc: bugfix: gned.exe with WinMain() didn't accept command-line
        file arguments that contained backslashes

2001-10-06  Andras Varga

	* findrepl.tcl: regexp replace improved (\1,\2 in replace string now work
        as expected)

2001-09-01 Andras Varga

	* CONST_CAST() replaced by const_cast<>()

2001-07-23  Ulrich Kaage  <kaage@int.uni-karlsruhe.de>

	* parsened.cc (error): use macro CONST_CAST (defined at top of
	file) to avoid compilation errors with gcc-2.95.3
	* ebnf.y (addGate): CONST_CAST again

2001-07-11  Ulrich Kaage  <kaage@int.uni-karlsruhe.de>